agui_macros/tests/compile-fail/build_bad_into.rs
use agui_macros::build;
use agui_primitives::Quad;

fn main() {
    let _widget: f32 = build! {
        Quad { }
    };
}
