agui_macros/tests/compile-fail/build_bad_into.stderr
error[E0277]: the trait bound `f32: From<Quad>` is not satisfied
 --> tests/compile-fail/build_bad_into.rs:6:9
  |
6 |         Quad
  |         ^^^^ the trait `From<Quad>` is not implemented for `f32`
  |
  = help: the following implementations were found:
            <f32 as From<i16>>
            <f32 as From<i8>>
            <f32 as From<u16>>
            <f32 as From<u8>>
  = note: required because of the requirements on the impl of `Into<f32>` for `Quad`
